mus: Remove the old client lib.

Remove the code for chrome-renderer that uses the old client-lib for mus.
Remove the old client-lib for mus since that is the only remaining use. A
subsequent CL will add a thin client-lib for chrome-renderer to use when
it runs as a mus-client (i.e. chrome is run with --use-mus-in-renderer).

BUG=672913
TBR=jam@ gpu_process_transport_factory.cc and render_widget.cc
    (trivial code update for deleted code)

Review-Url: https://codereview.chromium.org/2651593002
Cr-Commit-Position: refs/heads/master@{#445423}

Former-commit-id: 9fe4892d60cfb278970d6acb517e581a241ab012