content/browser/compositor/mus_browser_compositor_output_surface.h
@@ -23,12 +23,6 @@ namespace gpu {
 class GpuMemoryBufferManager;
 }
 
-// TODO(mfomitchev): Remove once we complete the switch to Aura-Mus.
-namespace ui {
-class Window;
-class WindowCompositorFrameSink;
-}
-
 namespace content {
 
 // Adapts a WebGraphicsContext3DCommandBufferImpl into a
@@ -38,16 +32,6 @@ class MusBrowserCompositorOutputSurface
     : public GpuBrowserCompositorOutputSurface,
       public cc::CompositorFrameSinkClient {
  public:
-  // TODO(mfomitchev): Remove this constructor once we complete the switch to
-  // Aura-Mus.
-  MusBrowserCompositorOutputSurface(
-      ui::Window* window,
-      scoped_refptr<ui::ContextProviderCommandBuffer> context,
-      gpu::GpuMemoryBufferManager* gpu_memory_buffer_manager,
-      const UpdateVSyncParametersCallback& update_vsync_parameters_callback,
-      std::unique_ptr<display_compositor::CompositorOverlayCandidateValidator>
-          overlay_candidate_validator);
-
   MusBrowserCompositorOutputSurface(
       aura::Window* window,
       scoped_refptr<ui::ContextProviderCommandBuffer> context,
@@ -82,10 +66,6 @@ class MusBrowserCompositorOutputSurface
   uint32_t AllocateResourceId();
   void FreeResourceId(uint32_t id);
   const gpu::Mailbox& GetMailboxFromResourceId(uint32_t id);
-
-  // TODO(mfomitchev): Remove once we complete the switch to Aura-Mus.
-  ui::Window* ui_window_;
-  std::unique_ptr<ui::WindowCompositorFrameSink> ui_compositor_frame_sink_;
 
   aura::Window* window_;
   std::unique_ptr<aura::WindowCompositorFrameSink> compositor_frame_sink_;
