content/renderer/mus/render_widget_mus_connection.h
@@ -10,18 +10,21 @@
 #include "cc/output/compositor_frame_sink.h"
 #include "cc/output/context_provider.h"
 #include "content/common/content_export.h"
-#include "content/renderer/input/render_widget_input_handler_delegate.h"
-#include "content/renderer/mus/compositor_mus_connection.h"
+#include "services/ui/public/interfaces/window_tree.mojom.h"
 
 namespace gpu {
 class GpuMemoryBufferManager;
 }
 
+namespace ui {
+class WindowCompositorFrameSinkBinding;
+}
+
 namespace content {
 
-// Use on main thread.
-class CONTENT_EXPORT RenderWidgetMusConnection
-    : public RenderWidgetInputHandlerDelegate {
+// This lives in the main-thread, and manages the connection to the mus window
+// server for a RenderWidget.
+class CONTENT_EXPORT RenderWidgetMusConnection {
  public:
   // Bind to a WindowTreeClient request.
   void Bind(mojo::InterfaceRequest<ui::mojom::WindowTreeClient> request);
@@ -43,40 +46,11 @@ class CONTENT_EXPORT RenderWidgetMusConnection
   friend class CompositorMusConnectionTest;
 
   explicit RenderWidgetMusConnection(int routing_id);
-  ~RenderWidgetMusConnection() override;
-
-  // RenderWidgetInputHandlerDelegate implementation:
-  void FocusChangeComplete() override;
-  bool HasTouchEventHandlersAt(const gfx::Point& point) const override;
-  void ObserveGestureEventAndResult(const blink::WebGestureEvent& gesture_event,
-                                    const gfx::Vector2dF& gesture_unused_delta,
-                                    bool event_processed) override;
-  void OnDidHandleKeyEvent() override;
-  void OnDidOverscroll(const ui::DidOverscrollParams& params) override;
-  void OnInputEventAck(std::unique_ptr<InputEventAck> input_event_ack) override;
-  void NotifyInputEventHandled(blink::WebInputEvent::Type handled_type,
-                               InputEventAckState ack_result) override;
-  void SetInputHandler(RenderWidgetInputHandler* input_handler) override;
-  void ShowVirtualKeyboard() override;
-  void UpdateTextInputState() override;
-  bool WillHandleGestureEvent(const blink::WebGestureEvent& event) override;
-  bool WillHandleMouseEvent(const blink::WebMouseEvent& event) override;
-
-  void OnConnectionLost();
-  void OnWindowInputEvent(
-      blink::WebScopedInputEvent input_event,
-      const base::Callback<void(ui::mojom::EventResult)>& ack);
+  ~RenderWidgetMusConnection();
 
   const int routing_id_;
-  RenderWidgetInputHandler* input_handler_;
   std::unique_ptr<ui::WindowCompositorFrameSinkBinding>
       window_compositor_frame_sink_binding_;
-  scoped_refptr<CompositorMusConnection> compositor_mus_connection_;
-
-  base::Callback<void(ui::mojom::EventResult)> pending_ack_;
-
-  // Used to verify single threaded access.
-  base::ThreadChecker thread_checker_;
 
   DISALLOW_COPY_AND_ASSIGN(RenderWidgetMusConnection);
 };
